Extract the version of tests and add to report (#137)
* Refactor to extract Software entity
* Get version from spec-tests
* Add specification-tests report section
* Fix use of dateTime to be consistent
* Fetch latest tests in docker build and add notes on this