@@ -125,21 +125,15 @@ class PathMappingsTest {
     }
 
     @Test
-    void mapFeatureIri() {
-        final URI path = pathMappings.mapFeatureIri(iri("https://example.org/test/group1/test.feature"));
-        assertEquals(TestUtils.getPathUri("src/test/resources/test-features/group1/test.feature"), path);
+    void mapIri() {
+        final URI uri = pathMappings.mapIri(iri("https://example.org/test-manifest-sample-1.ttl"));
+        assertEquals(TestUtils.getPathUri("src/test/resources/discovery/test-manifest-sample-1.ttl"), uri);
     }
 
     @Test
-    void mapIri() throws MalformedURLException {
-        final URL url = pathMappings.mapIri(iri("https://example.org/test-manifest-sample-1.ttl"));
-        assertEquals(TestUtils.getFileUrl("src/test/resources/discovery/test-manifest-sample-1.ttl"), url);
-    }
-
-    @Test
-    void mapIriNoMapping() throws MalformedURLException {
-        final URL url = pathMappings.mapIri(iri("https://example.org/unknown/test.ttl"));
-        assertEquals(new URL("https://example.org/unknown/test.ttl"), url);
+    void mapIriNoMapping() {
+        final URI uri = pathMappings.mapIri(iri("https://example.org/unknown/test.ttl"));
+        assertEquals(URI.create("https://example.org/unknown/test.ttl"), uri);
     }
 
     @Test
@@ -155,8 +149,8 @@ class PathMappingsTest {
     }
 
     @Test
-    void mapFeatureIriRemoteFeature() {
-        final URI path = pathMappings.mapFeatureIri(iri("https://example.org/remote/test.feature"));
+    void mapIriRemoteFeature() {
+        final URI path = pathMappings.mapIri(iri("https://example.org/remote/test.feature"));
         assertEquals(URI.create("https://example.org/remote/test.feature"), path);
     }
 
